# memLLM

./: .dockerignore  .gitignore  README.md  pyproject.toml
apps/api/: README.md  pyproject.toml
apps/api/src/memllm_api/: __init__.py  app.py  cli.py  manifests.py  model_gateway_client.py  registry.py  services.py  settings.py  store.py
apps/dev_ui/: README.md  pyproject.toml
apps/dev_ui/src/memllm_dev_ui/: app.py  cli.py  client.py  settings.py
apps/model_gateway/: README.md  pyproject.toml
apps/model_gateway/src/memllm_model_gateway/: __init__.py  app.py  cli.py  config.py  service.py  settings.py
characters/manifests/: calm_archivist.yaml  lin_xiaotang.yaml  winter_poet.yaml
characters/seeds/: README.md
characters/templates/: character_manifest.template.yaml
docs/: index.md  style_guide.md  uv_monorepo_notes.md
docs/architecture/: chat_flow.md  letta_memgpt_mapping.md  memory_model.md  monorepo_structure.md  runtime_stack.md
docs/architecture/MemGPT/: deep-research-report.md  research-report.md
docs/decisions/: 0001-monorepo-layout.md  0002-memory-reply-split.md
docs/integrations/: letta.md  model_gateway.md  provider_adapters.md
docs/planning/: current_status.md  letta_native_next_phase.md  phase_1_scope.md  phase_2_prep.md  post_step2_followups.md  roadmap.md
docs/reference/: character_manifest_guide.md  style_guide.md  uv_monorepo_notes.md
docs/runbooks/: dev_workflow.md  ubuntu_dev_stack.md
infra/compose/: ubuntu-dev-stack.yml
infra/compose/postgres-init/: 000_create_databases.sql
infra/docker/: api.Dockerfile  dev_ui.Dockerfile  letta.Dockerfile  model_gateway.Dockerfile
infra/docker/letta/: sitecustomize.py
infra/env/: ubuntu-dev.example.env
infra/model_gateway/: routes.yaml
infra/ollama/: Modelfile.qwen3.5-9b-q4km
scripts/: _dev_stack_common.sh  bootstrap_ubuntu.sh  clean_dev_stack.sh  seed_characters.py  status_dev_stack.sh  stop_dev_stack.sh
tests/e2e/: README.md
tests/integration/: test_api.py  test_character_seeding.py  test_chat_orchestrator.py  test_letta_gateway.py  test_model_gateway.py
