[project]
name = "memllm-dev-ui"
version = "0.1.0"
description = "Streamlit development UI for memLLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "memllm-domain",
    "pydantic-settings>=2.8.1",
    "streamlit>=1.43.2",
]

[project.scripts]
memllm-dev-ui = "memllm_dev_ui.cli:main"

[tool.uv.sources]
memllm-domain = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
